--- a/bread-favors.html
+++ b/bread-favors.html
@@ -27,20 +27,25 @@
 
     <h2>Instructions</h2>
     <ol>
-        <li>1. In a large mixing bowl, dump the mason jar contents (flour, salt, yeast) and combine with 3/4 cups room temp water until the mixture is very sticky and no lumps of flour remain. </li>
-        <li>2. Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
-        <li>2. Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
-        <li>3. Preheat the oven to 450°F. Place a large empty Dutch oven with a lid in the oven for at least 30 minutes (if you do not have one, you can preheat a baking sheet instead).
+        <li>In a large mixing bowl, dump the mason jar contents (flour, salt, yeast) and combine with 3/4 cups room temp water until the mixture is very sticky and no lumps of flour remain. </li>
+        <li>Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
+        <li>Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
+        <li>Preheat the oven to 450°F. Place a large empty Dutch oven with a lid in the oven for at least 30 minutes (if you do not have one, you can preheat a baking sheet instead).
             Next, uncover your risen dough and using lightly floured hands, reach down one side of the dough to the bottom of the bowl, pull up, and stretch the edge of the dough over the center toward the opposite side.
             Turn the bowl 90 degrees and repeat the folding and turning, working in a circle around the dough until it starts to hold its shape, about 8 to 10 rotations.
             Turn out the dough onto a lightly floured surface, placing it seam side down. Shape into a round loaf.</li>
-        <li>4. Transfer the dough onto parchment paper and sprinkle it with flour. Loosely cover with plastic wrap or a tea towel for 10 minutes.
+        <li>Transfer the dough onto parchment paper and sprinkle it with flour. Loosely cover with plastic wrap or a tea towel for 10 minutes.
             Using a sharp knife or bread lame, cut a slit about 1/4 inch deep across the top of the dough.</li>
-        <li>5. Place the dough with the parchment paper directly into the preheated Dutch oven or on your baking sheet.
+        <li>Place the dough with the parchment paper directly into the preheated Dutch oven or on your baking sheet.
             Cover with the lid. Bake for 20-25 minutes. Remove the lid and bake until deeply golden brown, about 15 to 17 minutes more.
             Baking Sheet instructions:</li>
-        <li>6. Carefully remove the artisan bread, and place it on a wire rack to cool for at least 20 minutes before slicing.</li>
+        <li>Carefully remove the artisan bread, and place it on a wire rack to cool for at least 20 minutes before slicing.</li>
     </ol>
+
+    <h2>Note:</h2>
+    <p>This recipe was originally from this article:</p>
+    <p>The ingredients are cut in half from this original recipe so they can fit in a mason jar :).
+    This recipe has a lot of great "pro-tips" for how to make your bread even better!</p>
 </div>
 </body>
 </html>
