--- a/bread-favors.html
+++ b/bread-favors.html
@@ -19,6 +19,10 @@
         h1, h2, p {
             color: #333;
         }
+
+        li {
+            padding: 5px
+        }
     </style>
 </head>
 <body>
@@ -29,8 +33,7 @@
     <ol>
         <li>In a large mixing bowl, dump the mason jar contents (flour, salt, yeast) and combine with 3/4 cups room temp water until the mixture is very sticky and no lumps of flour remain. </li>
         <li>Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
-        <li>Cover the bowl and place in a warm, draft-free area until doubled in size, about 1.5 to 2 hours.</li>
-        <li>Preheat the oven to 450°F. Place a large empty Dutch oven with a lid in the oven for at least 30 minutes (if you do not have one, you can preheat a baking sheet instead).
+        <li>Preheat the oven to 450 degrees. Place a large empty Dutch oven with a lid in the oven for at least 30 minutes (if you do not have one, you can preheat a baking sheet instead).
             Next, uncover your risen dough and using lightly floured hands, reach down one side of the dough to the bottom of the bowl, pull up, and stretch the edge of the dough over the center toward the opposite side.
             Turn the bowl 90 degrees and repeat the folding and turning, working in a circle around the dough until it starts to hold its shape, about 8 to 10 rotations.
             Turn out the dough onto a lightly floured surface, placing it seam side down. Shape into a round loaf.</li>
@@ -43,9 +46,13 @@
     </ol>
 
     <h2>Note:</h2>
-    <p>This recipe was originally from this article:</p>
+    <a href="https://preppykitchen.com/artisan-bread/">Original Recipe Link</a>
     <p>The ingredients are cut in half from this original recipe so they can fit in a mason jar :).
     This recipe has a lot of great "pro-tips" for how to make your bread even better!</p>
+
+    <h2>Thank you!</h2>
+    <p>Thank you so much for sharing in our joy and celebration on our special day. Your presence, love, and generous gifts mean more to us than words can express.
+        Here's to cherished memories and shared moments. From the bottom of our hearts, thank you!</p>
 </div>
 </body>
 </html>
