--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Bread Recipe</h1>
+    <h1>The Cashion Bread Favor Recipe</h1>
 
     <h2>Instructions</h2>
     <ol>
@@ -37,12 +37,12 @@
             Next, uncover your risen dough and using lightly floured hands, reach down one side of the dough to the bottom of the bowl, pull up, and stretch the edge of the dough over the center toward the opposite side.
             Turn the bowl 90 degrees and repeat the folding and turning, working in a circle around the dough until it starts to hold its shape, about 8 to 10 rotations.
             Turn out the dough onto a lightly floured surface, placing it seam side down. Shape into a round loaf.</li>
-        <li>Transfer the dough onto parchment paper and sprinkle it with flour. Loosely cover with plastic wrap or a tea towel for 10 minutes.
+        <li>Transfer the dough onto parchment paper and sprinkle it with flour. Loosely cover with plastic wrap or a towel for 10 minutes.
             Using a sharp knife or bread lame, cut a slit about 1/4 inch deep across the top of the dough.</li>
-        <li>Place the dough with the parchment paper directly into the preheated Dutch oven or on your baking sheet.
+        <li>Place the dough with the parchment paper directly into the preheated Dutch oven.
             Cover with the lid. Bake for 20-25 minutes. Remove the lid and bake until deeply golden brown, about 15 to 17 minutes more.
-            Baking Sheet instructions:</li>
-        <li>Carefully remove the artisan bread, and place it on a wire rack to cool for at least 20 minutes before slicing.</li>
+            If you are using a baking sheet, place the dough with parchment paper onto the baking sheet and bake anywhere from 30-40 minutes, or until your desired color.</li>
+        <li>Carefully remove the artisan bread, and place it on a wire rack/counter to cool for at least 20 minutes before slicing.</li>
     </ol>
 
     <h2>Note:</h2>
